# bk-aidev-agent

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md  readme_en.md
.claude/commands/: build-ai-helper-version.md
.cursor/commands/: doc-update.md
.github/workflows/: codeql.yml
docs/: release.md
docs/agent/: EXTENSION_AGENT.md  FAQ.md  readme.md
src/agent/: Makefile  pyproject.toml  readme.md  requirements.txt
src/agent/aidev_agent/: config.py  enums.py  exceptions.py
src/agent/aidev_agent/api/bkaidev_client/: client.py
src/agent/aidev_agent/core/agent/: agents.py  multimodal.py
src/agent/aidev_agent/services/: agent.py  chat.py  command_handler.py  config_manager.py  pydantic_models.py
src/agent/docs/: README_FRAMEWORK.md  release.md
src/agent/tests/: test_api.py
src/agent/tests/intergration/: conftest.py  constants.py  test_agent.py  test_chat_case.py  utilities.py
src/agent/tests/services/: test_chat.py  test_langchain_mcp.py
src/frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/frontend/.claude/: standard-doc-update-checklist.md
src/frontend/.claude/agents/: doc-expert.md  doc-update.md  spec.md
src/frontend/.claude/commands/: doc-update.md  spec.md
src/frontend/ai-blueking/: .env.development  .env.production  .eslintignore  .eslintrc.js  .prettierignore  .prettierrc.js  CHANGELOG.md  CLAUDE.md  package.json  readme.md  tsconfig.build.json  tsconfig.json
src/frontend/ai-blueking/playground/: app.vue  dynamic-demo.vue
src/frontend/ai-blueking/playground/components/: code-preview.vue  markdown-viewer.vue
src/frontend/ai-blueking/playground/views/: shortcut-filter-demo.vue
src/frontend/ai-blueking/scripts/: vite.build.ts  vite.utils.ts
src/frontend/ai-blueking/src/: ai-blueking-new.vue  env.d.ts  vite-env.d.ts  vue2.ts  vue3.ts
src/frontend/ai-blueking/src/components/: ai-cite-structured.vue  ai-cite.vue  ai-header.vue  ai-selected-box.vue  chat-input-box.vue  delete-confirm.vue  greeting-section.vue  history-panel.vue  loading-overlay.vue  message-list.vue  prompt-list.vue  render-message.vue  render-popup.vue  shortcuts-bar.vue  text-editor.vue
src/frontend/ai-blueking/src/composables/: use-chat-core.ts  use-custom-form.ts  use-greeting-height.ts  use-history-panel.ts  use-iframe-drag-resize.ts  use-keyboard-shortcut.ts  use-markdown.ts  use-mermaid.ts  use-message-list-standalone.ts  use-message-list.ts  use-nimbus.ts  use-overflow-handler.ts  use-select-pop.ts  (+5 more)
src/frontend/bk-ai-helper/: .env.development.example  .gitignore  .npmignore  BUILD_GUIDE.md  README.md  index.html  package.json  tsconfig.dts.json
src/frontend/bk-ai-helper/playground/: app.vue  main.ts
src/frontend/bk-ai-helper/scripts/: publish.ts  vite.build.ts  vite.dev.ts  vite.utils.ts
src/frontend/bk-ai-helper/src/: index.vue  vite-env.d.ts  vue2.ts  vue3.ts
src/frontend/publish-template/: .bk.development.env  package.json
src/frontend/vue2-playground/src/: App.vue
src/frontend/web/: package.json  server.cjs
src/frontend/web/docs/: changelog.md  faq.md  index.md  internal_development_sop.md
src/plugins/: pyproject.toml
src/plugins/aidev_ai_blueking/: Makefile  pyproject.toml
src/plugins/aidev_ai_blueking/aidev_ai_blueking/: urls.py
src/plugins/aidev_bkplugin/: Makefile  pyproject.toml
src/plugins/aidev_bkplugin/aidev_bkplugin/: apps.py  settings.py
src/plugins/aidev_bkplugin/aidev_bkplugin/openapi/: urls.py  views.py
src/plugins/aidev_bkplugin/aidev_bkplugin/services/: agent.py
src/plugins/aidev_bkplugin/aidev_bkplugin/views/: builtin.py
src/plugins/aidev_bkplugin/docs/: release.md
src/plugins/aidev_wxbot/: Makefile  README.md  pyproject.toml  settings.py
src/plugins/aidev_wxbot/aidev_wxbot/: __init__.py  manage.py  settings.py  urls.py  wsgi.py
src/plugins/aidev_wxbot/aidev_wxbot/api/: bkaidev.py  wxbot.py
src/plugins/aidev_wxbot/aidev_wxbot/migrations/: 0001_initial.py
src/plugins/aidev_wxbot/aidev_wxbot/utils/: exception.py  rabbitmq.py
src/plugins/aidev_wxbot/aidev_wxbot/wxaibot/: context.py  models.py  redirect.py  urls.py  views.py
src/plugins/aidev_wxbot/api/: __init__.py  wxbot.py
src/plugins/aidev_wxbot/docs/: release.md
src/plugins/aidev_wxbot/utils/: rabbitmq.py
src/plugins/aidev_wxbot/wxaibot/: context.py  models.py  urls.py  views.py
src/plugins/aidev_wxbot/wxaibot/plugins/: welcome.py
src/wxbot_plugin/: pyproject.toml
src/wxbot_plugin/aidev_wxbot_plugin/: manage.py  settings.py  urls.py  wsgi.py
src/wxbot_plugin/aidev_wxbot_plugin/api/: bkaidev.py  wxbot.py
src/wxbot_plugin/aidev_wxbot_plugin/context/: __init__.py
src/wxbot_plugin/aidev_wxbot_plugin/utils/: exception.py
src/wxbot_plugin/aidev_wxbot_plugin/wxaibot/: context.py  views.py
src/wxbot_plugin/aidev_wxbot_plugin/wxbot/: context.py  urls.py  views.py
template/: cookiecutter.json
template/hooks/: post_gen_project.py
template/{{cookiecutter.project_name}}/: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app_desc.yml  pyproject.toml  readme.md  requirements.txt
template/{{cookiecutter.project_name}}/agent/: apps.py  permissions.py  settings.py  urls.py
template/{{cookiecutter.project_name}}/agent/openapi/: urls.py
template/{{cookiecutter.project_name}}/agent/services/: agent.py  factory.py
template/{{cookiecutter.project_name}}/agent/views/: builtin.py
template/{{cookiecutter.project_name}}/bk_plugin/: config.py  meta.py  settings.py
template/{{cookiecutter.project_name}}/bk_plugin/apis/: urls.py
template/{{cookiecutter.project_name}}/bk_plugin/docs/: EXTENSION_AGENT.md
template/{{cookiecutter.project_name}}/bk_plugin/extend/: agent.py  config_manager.py
template/{{cookiecutter.project_name}}/bk_plugin/openapi/: urls.py
template/{{cookiecutter.project_name}}/bk_plugin/patch/: urls.py
template/{{cookiecutter.project_name}}/bk_plugin/versions/: assistant.py  assistant_components.py
template/{{cookiecutter.project_name}}/bk_plugin/views/: home.py
template/{{cookiecutter.project_name}}/support-files/: cookiecutter.yaml  env.template
(+62 files in other folders)
