[project]
authors = [
    {name = "blueking"},
]
license = {text = "MIT"}
requires-python = "~=3.11.10"
dependencies = []
name = "bk-aidev"
version = "0.1.0"
description = "pre-commit for bi-aidev"

[dependency-groups]
dev = [
    "ipdb<0.14.0,>=0.13.13",
    "pytest<7.5.0,>=7.4.4",
    "pytest-django<4.8.0,>=4.7.0",
    "pytest-asyncio<0.24.0,>=0.23.3",
    "pytest-env<1.2.0,>=1.1.3",
    "pytest-cov<4.2.0,>=4.1.0",
    "pytest-timeout==2.3.1",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
exclude = [
    "*/config/",
    "*/migrations/",
]
force-exclude = true
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "PIE",
    "PERF"
]
ignore = ["PERF401", "E501", "E402"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
# 总是显式制定 import section 的顺序
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
relative-imports-order = "closest-to-furthest"

[tool.ruff.per-file-ignores]
"template/**/*.py" = ["F821"]  # 只忽略 template 目录下所有 Python 文件中的 F821 错误

