[project]
name = "ai-plugin"
version = "1.0.0"
description = ""
readme = "readme.md"
authors = [{ name = "blueking" }]
requires-python = "~=3.11.9"
dependencies = [
    "aidev-agent==1.0.8.post1",
    "aidev-ai-blueking==1.3.3",
    "aidev-bkplugin==1.0.13",
    "aidev-wxbot>=1.0.9,<1.1",
    "bk-plugin-framework>=2.3.3,<2.4.0",
    "bkapi-bk-apigateway==1.0.12",
    "celery==5.4.0",
    "django-celery-beat==2.7.0",
    "django-celery-results==2.5.1",
    "gunicorn==23.0.0",
    "opentelemetry-api==1.33.1",
    "opentelemetry-exporter-jaeger==1.21.0",
    "opentelemetry-exporter-jaeger-proto-grpc==1.21.0",
    "opentelemetry-exporter-jaeger-thrift==1.21.0",
    "opentelemetry-exporter-otlp==1.33.1",
    "opentelemetry-exporter-otlp-proto-common==1.33.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.33.1",
    "opentelemetry-exporter-otlp-proto-http==1.33.1",
    "opentelemetry-instrumentation==0.54b1",
    "opentelemetry-instrumentation-celery==0.54b1",
    "opentelemetry-instrumentation-dbapi==0.54b1",
    "opentelemetry-instrumentation-django==0.54b1",
    "opentelemetry-instrumentation-langchain==0.38.10",
    "opentelemetry-instrumentation-logging==0.54b1",
    "opentelemetry-instrumentation-redis==0.54b1",
    "opentelemetry-instrumentation-requests==0.54b1",
    "opentelemetry-instrumentation-wsgi==0.54b1",
    "opentelemetry-proto==1.33.1",
    "opentelemetry-sdk==1.33.1",
    "opentelemetry-semantic-conventions==0.54b1",
    "opentelemetry-semantic-conventions-ai==0.4.3",
    "opentelemetry-util-http==0.54b1",
    "tiktoken==0.11.0",
]

[tool.pdm.build]
includes = ["aidev"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "ipdb<0.14.0,>=0.13.13",
    "pre-commit==4.0.1",
]

[tool.ruff]
exclude = [
    "*/config/",
    "*/migrations/",
]
force-exclude = true
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "PIE",
    "PERF"
]
ignore = ["PERF401", "E501", "E402"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
# 总是显式制定 import section 的顺序
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
relative-imports-order = "closest-to-furthest"
