[project]
name = "aidev-bkplugin"
version = "1.0.14"
description = "AiDev Agent Bkplugin builtin functions"
readme = "readme.md"
requires-python = ">=3.11.9, <4"
dependencies = [
    "aidev-agent>=1.0.8.post2,<1.1",
    "blueapps>=4.15.1, <5.0",
]


[tool.pdm.build]
includes = ["aidev_bkplugin"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
