[project]
authors = [
    {name = "blueking"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10.5"
dependencies = [
    "pydantic==2.11.7",
    "stackprinter==0.2.12",
    "pycryptodome==3.23.0",
    "requests==2.32.5",
    "pika<2.0,>=1.3.0",
    "blueapps[opentelemetry]>=4.15.1,<5.0",
    "pip"
]
name = "aidev-wxbot-plugin"
version = "0.1.0"
description = "bkaidev wxbot plugin"

[tool.pdm.build]
includes = ["aidev_wxbot_plugin"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
exclude = ["*/config/", "*/migrations/"]
force-exclude = true
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "PIE", "PERF", "SIM"]
ignore = ["PERF401", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
# 总是显式制定 import section 的顺序
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
relative-imports-order = "closest-to-furthest"

[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = [".env"]
asyncio_default_fixture_loop_scope = "session"
addopts = "-vvv --maxfail=2 -s"
asyncio_mode = "auto"