[tool.poetry]
name = "aidev-wxbot"
version = "0.1.0"
description = "bkaidev wxbot plugin"
authors = ["tencentblueking"]
license = "MIT"
readme = "README.md"
packages = [{include = "aidev_wxbot"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["*/config/", "*/migrations/"]
force-exclude = true
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "PIE", "PERF", "SIM"]
ignore = ["PERF401", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
# 总是显式制定 import section 的顺序
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
relative-imports-order = "closest-to-furthest"

[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = [".env"]
asyncio_default_fixture_loop_scope = "session"
addopts = "-vvv --maxfail=2 -s"
asyncio_mode = "auto"